--- a/EVTX_ATT&CK_Metadata/EVTX_Metadata.ipynb
+++ b/EVTX_ATT&CK_Metadata/EVTX_Metadata.ipynb
@@ -953,7 +953,8 @@
     }
    ],
    "source": [
-    "# Unique number of events by EventIDappended_data['EventID'].value_counts(sort=True)"
+    "# Unique number of events by EventID\n",
+    "#ended_data['EventID'].value_counts(sort=True)"
    ]
   },
   {
