--- a/EVTX_ATT&CK_Metadata/EVTX_Metadata.ipynb
+++ b/EVTX_ATT&CK_Metadata/EVTX_Metadata.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "source": [
-    "## Importing used libraries\n",
+    "## Importing used packages\n",
     "The following libraries should be installed\n",
     "- pandas\n",
     "- lxlm\n",
